# Kanban-Example

./: Cargo.toml
src/: main.rs
src/api/: board.rs  mod.rs  static_files.rs
src/model/: board.rs  column.rs  mod.rs  ticket.rs
