[package]
name = "kanban-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
conventually = { path = "/Users/divitoa/Documents/RUST/conventually" }
wasmcomputev3-lib = { path = "/Users/divitoa/Documents/projects/wasmcomputev3-lib" }
